--- a/config/infra-dev/nextflow-ecs-task-definition.yaml
+++ b/config/infra-dev/nextflow-ecs-task-definition.yaml
@@ -34,7 +34,8 @@ parameters:
     - khai.do@sagebase.org
   TowerConfigFileName: "tower.yaml"
 
-stack_tags: { { stack_group_config.default_stack_tags } }
+stack_tags: 
+  {{stack_group_config.default_stack_tags}}
 
 sceptre_user_data:
   environment: !file src/tower/resources/environment.yaml
