--- a/config/infra-prod/nextflow-ecs-task-definition.yaml
+++ b/config/infra-prod/nextflow-ecs-task-definition.yaml
@@ -33,8 +33,9 @@ parameters:
     - thomas.yu@sagebase.org
   TowerConfigFileName: "tower.yaml"
 
-stack_tags: { { stack_group_config.default_stack_tags } }
-
+stack_tags: 
+  {{stack_group_config.default_stack_tags}}
+  
 sceptre_user_data:
   environment: !file src/tower/resources/environment.yaml
   EnableRedisDocker: false
