[IBCDPE-1006] Updates mysql DBUrl
This adds a missing parameter to the TOWER_DB_URL. Documentation from Seqera [here](https://docs.seqera.io/platform/24.1.1/enterprise/release_notes/enterprise_latest#breaking-changes).

--- a/templates/nextflow-aurora-mysql.yaml
+++ b/templates/nextflow-aurora-mysql.yaml
@@ -406,7 +406,7 @@ Outputs:
     Value: !Join
       - ''
       - - !Sub 'jdbc:mysql://${AuroraCluster.Endpoint.Address}:'
-        - !Sub '${AuroraCluster.Endpoint.Port}/${DBName}'
+        - !Sub '${AuroraCluster.Endpoint.Port}/${DBName}?permitMysqlScheme=true'
     Export:
       Name: !Sub '${AWS::Region}-${AWS::StackName}-DBUrl'
 
