--- a/templates/nextflow-tower-config-bucket.yaml
+++ b/templates/nextflow-tower-config-bucket.yaml
@@ -69,6 +69,7 @@ Resources:
                 - "*@sagebionetworks.org"
                 - "cheimann@isbscience.org"
                 - "clarisse.lau@isbscience.org"
+                - "vesteinn.thorsson@isbscience.org"
           trustedEmails:
             - "benjamin_vincent@med.unc.edu"
             - "dbortone@email.unc.edu"
