--- a/config/projects-prod/dynamic-challenge-project.yaml
+++ b/config/projects-prod/dynamic-challenge-project.yaml
@@ -16,6 +16,7 @@ parameters:
     - "{{stack_group_config.tower_viewer_arn_prefix}}/jenny.medina@sagebase.org"
     - "{{stack_group_config.tower_viewer_arn_prefix}}/verena.chung@sagebase.org"
     - "{{stack_group_config.tower_viewer_arn_prefix}}/gaia.andreoletti@sagebase.org"
+    - "{{stack_group_config.tower_viewer_arn_prefix}}/bryan.fauble@sagebase.org"
   AccountAdminArns:
     - "{{stack_group_config.sso_admin_role.arn}}"
     - !stack_output_external sagebase-github-oidc-workflows-prod-nextflow-infra::ProviderRoleArn
