Add Dar'ya to trustedEmails

--- a/templates/nextflow-tower-config-bucket.yaml
+++ b/templates/nextflow-tower-config-bucket.yaml
@@ -75,6 +75,7 @@ Resources:
             - "steven_vensko@med.unc.edu"
             - "clarence@hms.harvard.edu"
             - "Jeremy_Muhlich@hms.harvard.edu"
+            - "dpozhida@systemsbiology.org"
           scm:
             providers:
               github:
