--- a/config/projects-ampad/agora-project.yaml
+++ b/config/projects-ampad/agora-project.yaml
@@ -13,6 +13,7 @@ parameters:
     - "{{stack_group_config.tower_viewer_arn_prefix}}/brad.macdonald@sagebase.org"
     - "{{stack_group_config.tower_viewer_arn_prefix}}/thomas.yu@sagebase.org"
     - "{{stack_group_config.tower_viewer_arn_prefix}}/jessica.britton@sagebase.org"
+    - "{{stack_group_config.tower_viewer_arn_prefix}}/beatriz.saldana@sagebase.org"
   AccountAdminArns:
     - "{{stack_group_config.sso_admin_role.arn}}"
     - !stack_output_external github-oidc-nextflow-infra::ProviderRoleArn
