Update and rename diverse-cohorts-project-beatriz.yaml to diverse-cohorts-project.yaml
Added CostCenter and updated yaml name to match stack_name

--- a/config/projects-ampad/diverse-cohorts-project.yaml
+++ b/config/projects-ampad/diverse-cohorts-project.yaml
@@ -22,5 +22,6 @@ parameters:
 
 stack_tags:
   Department: NDR
-  Project: diverse-cohorts
+  Project: diverse-cohorts-project
   OwnerEmail: beatriz.saldana@sagebase.org
+  CostCenter: AMP 2.0 Diverse Cohorts AD Portal / 102300
