--- a/config/projects-prod/genie-bpc-project.yaml
+++ b/config/projects-prod/genie-bpc-project.yaml
@@ -13,6 +13,7 @@ parameters:
     - '{{stack_group_config.tower_viewer_arn_prefix}}/chelsea.nayan@sagebase.org'
     - '{{stack_group_config.tower_viewer_arn_prefix}}/rixing.xu@sagebase.org'
     - '{{stack_group_config.tower_viewer_arn_prefix}}/dan.lu@sagebase.org'
+    - '{{stack_group_config.tower_viewer_arn_prefix}}/adam.taylor@sagebase.org'
   AllowSynapseIndexing: Enabled
   AccountAdminArns:
     - '{{stack_group_config.sso_admin_role.arn}}'
