--- a/config/projects-prod/mc2-project.yaml
+++ b/config/projects-prod/mc2-project.yaml
@@ -2,7 +2,7 @@
 
 # (REQUIRED) Step 1: Update the stack name below by replacing "example" with your project name
 #                    Note that the stack name cannot contain more than 32 characters
-stack_name: example-project
+stack_name: mc2-project
 
 stack_tags:
   # (REQUIRED) Step 2: Update all four values below
