[IT-2361] Add output for nextflow-ecs-cluster (#384)
Add an cloudformation export to prep for deployment of batch
compute environments.

--- a/templates/nextflow-ecs-cluster.yaml
+++ b/templates/nextflow-ecs-cluster.yaml
@@ -196,6 +196,11 @@ Outputs:
     Export:
       Name: !Sub '${AWS::Region}-${AWS::StackName}-EcsLaunchTemplate'
 
+  EcsLaunchTemplateLatestVersionNumber:
+    Value: !GetAtt EcsLaunchTemplate.LatestVersionNumber
+    Export:
+      Name: !Sub '${AWS::Region}-${AWS::StackName}-EcsLaunchTemplateLatestVersionNumber'
+
   EcsAutoScalingGroupName:
     Value: !Ref EcsAutoScalingGroup
     Export:
