Revert "deactivate old Tower accounts on strides" (#401)
This reverts commit e94d7d69a9cabf758c6b94589ddce20f4919e057.
This caused CI deployment failure

--- a/config/projects-ampad/jared-hendrickson-project.yaml
+++ b/config/projects-ampad/jared-hendrickson-project.yaml
@@ -6,7 +6,7 @@ dependencies:
   - common/nextflow-launch-iam-policy.yaml
 
 parameters:
-  S3ReadOnlyAccessArns:
+  S3ReadWriteAccessArns:
     - '{{stack_group_config.tower_viewer_arn_prefix}}/william.poehlman@sagebase.org'
     - '{{stack_group_config.tower_viewer_arn_prefix}}/thomas.yu@sagebase.org'
     - '{{stack_group_config.tower_viewer_arn_prefix}}/jaclyn.beck@sagebase.org'
